style: fix spacing places added

--- a/src/app/geographic/places/places.component.scss
+++ b/src/app/geographic/places/places.component.scss
@@ -45,6 +45,7 @@
     margin-top:36px;
 
     .place-added{
+      margin: 0px 15px;
       padding: 12px;
       background: #a6adb7;
       color: #FFF;
@@ -90,15 +91,36 @@
         visibility:hidden;
         opacity:0;
       }
+      .controls{
+        margin-right: auto;
+        float: right;
+        width: 50px;
+        display: flex;
+        position: absolute;
+        right: 15px;
+      }
+      .reverse{
+        position: absolute;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        background: #4f5564;
+        /* border-radius: 50%; */
+        width: 27px;
+        height: 26px;
+        bottom: -11px;
+    right: 3px;
+        transform: rotate(90deg);
+        color: #FFF;
+      }
       
       .title-place-added{
         font-size: 13.5px;
       }
 
       .fa-exchange-alt {
-        &:before{
-          margin: -1.7em -1em;
-          position: absolute;
+        font-size: 9px;
+        &:before{      
           transform: rotate(90deg);
           font-weight: 300;
           font-size: 1.5em;
